# RecruitRover

./: .gitignore  README.md
ai_researcher/: pyproject.toml  requirements.txt
ai_researcher/app/: .env.example  app.py
